<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="wrap_content"
            android:text="@string/vehicle_status"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <TextView
            android:textColor="@color/colorAccent"
            android:id="@+id/vehicle_connection_status"
            android:text="@string/vehicle_status_disconnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <Switch
        android:paddingTop="@dimen/vertical_spacer"
        android:paddingBottom="@dimen/vertical_spacer"
        android:text="@string/switch_smart_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/smartModeSwitch"
        android:textStyle="normal|bold" />

    <Switch
        android:enabled="false"
        android:paddingTop="@dimen/vertical_spacer"
        android:paddingBottom="@dimen/vertical_spacer"
        android:text="@string/switch_vehicle_power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vehiclePower"
        android:textStyle="normal|bold" />

    <Button
        android:enabled="false"
        style="@style/Widget.AppCompat.Button"
        android:paddingTop="@dimen/vertical_spacer"
        android:paddingBottom="@dimen/vertical_spacer"
        android:text="@string/button_vehicle_starter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vehicleEngineStarter" />
</LinearLayout>